UCLALIB-49: Readjust menuitem whitespace now that site width is fixed.

--- a/www/sites/all/themes/uclalib_omega/sass/regions/_navigation.scss
+++ b/www/sites/all/themes/uclalib_omega/sass/regions/_navigation.scss
@@ -1,5 +1,5 @@
 $nav-vert-space: 16px;
-$nav-horiz-space: 25px;
+$nav-horiz-space: 30px;
 
 .l-navigation-wrapper {
   background: $nav-bg-color;
